src/test/ui/const-generics/generic_const_exprs/issue-74713.stderr
error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/issue-74713.rs:4:17
   |
LL |         let _: &'a ();
   |                 ^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = help: add `#![feature(generic_const_exprs)]` to the crate attributes to enable

error[E0308]: mismatched types
  --> $DIR/issue-74713.rs:3:10
   |
LL |       [(); {
   |  __________^
LL | |         let _: &'a ();
LL | |     }]:
   | |_____^ expected `usize`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
