src/test/ui/const-generics/generic_const_exprs/issue-74713.rs
fn bug<'a>()
where
    [(); { //~ ERROR mismatched types
        let _: &'a (); //~ ERROR a non-static lifetime is not allowed in a `const`
    }]:
{}

fn main() {}
